# url-status-checker

./: Cargo.toml  README.md  some.txt
.github/workflows/: rust.yml
src/: main.rs
